# E-commerce-Product-Analytics

./: .gitignore  PROJECT_PLAN.md  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt
bi/: E-Commerce_Product_Analytics.pbix  E_Commerce_Product_Analytics.pbix  README.md
data/: README.md
data/powerbi/: ab_test_summary.csv  cohort_retention.csv  funnel_metrics.csv
docs/: README.md  business_insights.md
notebooks/: 01_cohort_retention_analysis.ipynb  02_ab_test_analysis.ipynb  README.md
scripts/: README.md  export_powerbi_data.py  materialize_tables.py
sql/: README.md
sql/analytics/: 01_sessionization.sql  02_funnel.sql  03_cohort_users.sql  03_cohorts.sql  04_cohort_activity.sql  04_cohort_retention_query.sql  05_cohort_retention.sql  05_cohort_retention_rates.sql  06_cohort_sizes.sql  06_powerbi_views.sql  07_cohort_retention_rates.sql  08_powerbi_views.sql
src/: README.md  cohort_analysis.py  data_generator.py  load_to_db.py
