[project]
name = "e-commerce-product-analytics"
version = "0.1.0"
description = "End-to-end product analytics project: Funnel analysis, cohort retention, and A/B testing with realistic e-commerce data"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "duckdb>=0.9.0",
    "streamlit>=1.28.0",
    "jupyter>=1.0.0",
    "psycopg2-binary>=2.9.11",
]
